[package]
name = "unnest"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
iowrap = "0.2"
memchr = "2"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
lto = true
panic = "abort"

[[bin]]
name = "unnest"
