[package]
name = "unnest-ndjson"
version = "0.1.1"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Convert large JSON documents to ndjson/jsonlines"
repository = "https://github.com/FauxFaux/unnest-ndjson"
readme = "README.md"
categories = ["encoding"]
license = "MIT OR Apache-2.0"

edition = "2021"

[dependencies]
iowrap = "0.2"
memchr = "2"

[dev-dependencies]
itertools = "0.10"
maplit = "1"
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
lto = true
panic = "abort"

[[bin]]
name = "unnest-ndjson"
